--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -42,10 +42,17 @@
       console.log(inventorsFullName);
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+      const inventorsSortedByAge = inventors.sort((a, b) => {
+      return b.year - a.year;
+    });
+    console.log(inventorsSortedByAge);
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live?
-
+    const inventorsSumOfYears = inventors.reduce((acc, value) => {
+      return acc += (value.passed - value.year);
+    }, 0);
+    console.log(inventorsSumOfYears);
     // 5. Sort the inventors by years lived
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
