--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -29,31 +29,39 @@
 
     const people = ['Beck, Glenn', 'Becker, Carl', 'Beckett, Samuel', 'Beddoes, Mick', 'Beecher, Henry', 'Beethoven, Ludwig', 'Begin, Menachem', 'Belloc, Hilaire', 'Bellow, Saul', 'Benchley, Robert', 'Benenson, Peter', 'Ben-Gurion, David', 'Benjamin, Walter', 'Benn, Tony', 'Bennington, Chester', 'Benson, Leana', 'Bent, Silas', 'Bentsen, Lloyd', 'Berger, Ric', 'Bergman, Ingmar', 'Berio, Luciano', 'Berle, Milton', 'Berlin, Irving', 'Berne, Eric', 'Bernhard, Sandra', 'Berra, Yogi', 'Berry, Halle', 'Berry, Wendell', 'Bethea, Erin', 'Bevan, Aneurin', 'Bevel, Ken', 'Biden, Joseph', 'Bierce, Ambrose', 'Biko, Steve', 'Billings, Josh', 'Biondo, Frank', 'Birrell, Augustine', 'Black, Elk', 'Blair, Robert', 'Blair, Tony', 'Blake, William'];
 
-    // Array.prototype.filter()
+    / Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
-      const inventorsBorn1500 = inventors.filter((inventor) => {
-      return inventor.year >= 1500 && inventor.year < 1600;
-    });
-  console.log(inventorsBorn1500);
+      const inventorsBorn1500 = inventors.filter( inventor =>
+        inventor.year >= 1500 && inventor.year < 1600);
+
+      console.log(inventorsBorn1500);
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors' first and last names
-    const inventorsFullName = inventors.map((inventor) => `${inventor.first} ${inventor.last}`);
-      console.log(inventorsFullName);
+    const inventorsFullName = inventors.map( inventor => `${inventor.first} ${inventor.last}`);
+
+    console.log(inventorsFullName);
+
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
-      const inventorsSortedByAge = inventors.sort((a, b) => {
-      return b.year - a.year;
-    });
+      const inventorsSortedByAge = inventors.sort((a, b) =>
+       b.passed - a.year);
+
     console.log(inventorsSortedByAge);
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live?
     const inventorsSumOfYears = inventors.reduce((acc, value) => {
       return acc += (value.passed - value.year);
-    }, 0);
+        }, 0);
+
     console.log(inventorsSumOfYears);
+
     // 5. Sort the inventors by years lived
+    const inventorsSortedByYearsLived = inventors.sort((a, b) =>
+      b.year - a.passed);
+
+    console.log(inventorsSortedByYearsLived);
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
