--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -26,7 +26,12 @@
 
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
+    const isAdult = people.some( person => (new Date()).
+      getFullYear() - person.year >= 19);
+
     // Array.prototype.every() // is everyone 19 or older?
+    const allAdults = people.every( person => (new Date()).
+      getFullYear() - person.year >= 19);
 
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
@@ -37,6 +42,10 @@
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
+    const deleteComment = comments.findIndex( comment =>
+      comment.id === 823423).splice();
+
+    console.log(comments);
 
   </script>
 </body>
