--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -42,10 +42,13 @@
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
-    const deleteComment = comments.findIndex( comment =>
-      comment.id === 823423).splice();
+    const index = comments.findIndex( comment =>
+      comment.id === 823423);
 
-    console.log(comments);
+    const newComments = [
+      ...comments.slice(0, index),
+      ...comments.slice(index + 1)
+    ];
 
   </script>
 </body>
